#35 separated character sending service to single and batch sending