@@ -4,40 +4,38 @@ import jakarta.inject.Singleton;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import marowak.dev.dto.motion.PlayerMotion;
-import marowak.dev.enums.CharacterMessageKey;
 import marowak.dev.request.CharacterRequest;
 import marowak.dev.service.motion.PlayerMotionService;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @Singleton
 public class CharacterServiceImpl implements CharacterService {
-    private final CharacterClient characterClient;
+    private final CharactersClient charactersClient;
     private final PlayerMotionService playerMotionService;
 
     @Override
     public void sendCharactersUpdate() {
         Collection<PlayerMotion> motions = playerMotionService.getAllMotions();
+        if (motions.isEmpty()) {
+            return;
+        }
+
         List<CharacterRequest> requests = motions.stream()
                 .map(this::convertPlayerMotion)
-                .collect(Collectors.toList());
+                .toList();
 
-        characterClient.sendCharacter(CharacterMessageKey.CHARACTER_UPDATE_ALL, requests)
+        charactersClient.sendCharacters(requests)
                 .doOnError(e -> log.error("Send failed", e))
-                .doOnNext(r -> log.debug("Send message for create character {}, account {}", r.accountName(), r.characterName()))
+                .doOnNext(r -> log.debug("Send message for updating characters"))
                 .subscribe();
     }
 
     private CharacterRequest convertPlayerMotion(PlayerMotion playerMotion) {
-        return CharacterRequest.builder()
-                .characterName(playerMotion.playerName())
-                .x(playerMotion.motion().x())
-                .y(playerMotion.motion().y())
-                .angle(playerMotion.motion().angle())
-                .build();
+        return new CharacterRequest(null, playerMotion.playerName(),
+                playerMotion.motion().x(), playerMotion.motion().y(), playerMotion.motion().angle());
     }
 }
